# CompanionPilot

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
apps/companionpilot/: Cargo.toml
apps/companionpilot/src/: main.rs
crates/companionpilot-core/: Cargo.toml
crates/companionpilot-core/src/: config.rs  dashboard.html  discord_bot.rs  http.rs  lib.rs  orchestrator.rs  safety.rs  types.rs  voice.rs
crates/companionpilot-core/src/memory/: in_memory.rs  mod.rs  postgres.rs
crates/companionpilot-core/src/model/: mock.rs  mod.rs  openrouter.rs
crates/companionpilot-core/src/tools/: current_datetime.rs  mod.rs  spotify_playing_status.rs
migrations/: 0001_init.sql  0002_chat_messages.sql  0003_tool_call_logs.sql  0004_planner_decision_logs.sql
src/: config.rs  discord_bot.rs  http.rs  lib.rs  main.rs  orchestrator.rs  types.rs
src/memory/: in_memory.rs  mod.rs  postgres.rs
src/model/: mock.rs  mod.rs  openai.rs
src/tools/: mod.rs  web_search.rs
