[package]
name = "companionpilot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
companionpilot-core = { path = "../../crates/companionpilot-core" }
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
